alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,7 @@
 .container-fluid h3{
     font-weight: bold;
 }
+
+/* .col h4{
+    font-weight: bold;
+} */
